crates/gridwell-writer-rtf/tests/snapshots/snapshots__snapshot_minimal_1x1.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: "render(\"minimal/minimal_1x1.json\")"
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\par
\trowd\trhdr\cellx2160
\pard\intbl\b Value\cell
\row
\trowd\cellx2160
\pard\intbl Hello\cell
\row
}
