crates/gridwell-writer-rtf/tests/snapshots/snapshots__snapshot_minimal_no_header.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: "render(\"minimal/minimal_no_header.json\")"
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\par
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\b Name\cell
\pard\intbl\b Score\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl Alice\cell
\pard\intbl 95\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl Bob\cell
\pard\intbl 87\cell
\row
}
