crates/gridwell-writer-rtf/tests/snapshots/snapshots__snapshot_row_group_multiple.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: "render(\"minimal/row_group_multiple.json\")"
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\par
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\b City\cell
\pard\intbl\b Pop (M)\cell
\pard\intbl\b Area (km\u178?)\cell
\row
\trowd\trqc\cellx6480
\pard\intbl\b Asia\b0\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl Tokyo\cell
\pard\intbl 13.96\cell
\pard\intbl 2,194\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl Seoul\cell
\pard\intbl 9.74\cell
\pard\intbl 605\cell
\row
\trowd\trqc\cellx6480
\pard\intbl\b Europe\b0\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl London\cell
\pard\intbl 8.98\cell
\pard\intbl 1,572\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl Paris\cell
\pard\intbl 2.16\cell
\pard\intbl 105\cell
\row
}
