crates/gridwell-writer-rtf/tests/snapshots/snapshots__snapshot_styles_borders.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: "render(\"minimal/styles_borders.json\")"
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\par
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\b\b A\cell
\pard\intbl\b\b B\cell
\pard\intbl\b\b C\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl all borders\cell
\pard\intbl all borders\cell
\pard\intbl all borders\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl dashed\cell
\pard\intbl dashed\cell
\pard\intbl dashed\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl none\cell
\pard\intbl none\cell
\pard\intbl none\cell
\row
}
