crates/gridwell-writer-rtf/tests/snapshots/snapshots__snapshot_summary_rows.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: "render(\"minimal/summary_rows.json\")"
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;\red85\green85\blue85;\red245\green245\blue245;}
\par
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\b Item\cell
\pard\intbl\b Qty\cell
\pard\intbl\b Total\cell
\row
\trowd\trqc\cellx6480
\pard\intbl\b Order #1234\b0\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl Apples\cell
\pard\intbl 5\cell
\pard\intbl $7.50\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl Bread\cell
\pard\intbl 2\cell
\pard\intbl $8.00\cell
\row
\trowd\clcbpat4\cellx2160\clcbpat4\cellx4320\clcbpat4\cellx6480
\pard\intbl\b\i\cf3 Total\cell
\pard\intbl\b\i\cf3 7\cell
\pard\intbl\b\i\cf3 $15.50\cell
\row
}
