crates/gridwell-writer-rtf/tests/snapshots/snapshots__snapshot_unicode_cjk.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: "render(\"minimal/unicode_cjk.json\")"
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\pard\b\fs36 \u19990?\u30028?\u12398?\u-28419?\u24066?\b0\par
\par
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\b \u-28419?\u24066?\cell
\pard\intbl\b \u20154?\u21475? (\u19975?\u20154?)\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl \u26481?\u20140?\cell
\pard\intbl 1,396\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl \u22823?\u-27094?\cell
\pard\intbl 884\cell
\row
}
