crates/gridwell-writer-rtf/tests/snapshots/snapshots__source-notes.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\b Metric\cell
\pard\intbl\b Value\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl Users\cell
\pard\intbl 1,024\cell
\row
\par
\pard{\fs18 Source: internal analytics.}\par
\pard{\fs18 Collected June 2026.}\par
}
