crates/gridwell-writer-rtf/tests/snapshots/snapshots__striping-basic.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;\red249\green249\blue249;}
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\b A\cell
\pard\intbl\b B\cell
\pard\intbl\b C\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl 1\cell
\pard\intbl 2\cell
\pard\intbl 3\cell
\row
\trowd\clcbpat3\cellx2160\clcbpat3\cellx4320\clcbpat3\cellx6480
\pard\intbl 4\cell
\pard\intbl 5\cell
\pard\intbl 6\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl 7\cell
\pard\intbl 8\cell
\pard\intbl 9\cell
\row
\trowd\clcbpat3\cellx2160\clcbpat3\cellx4320\clcbpat3\cellx6480
\pard\intbl 10\cell
\pard\intbl 11\cell
\pard\intbl 12\cell
\row
}
