crates/gridwell-writer-rtf/tests/snapshots/snapshots__styled-text.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\b Term\cell
\pard\intbl\b Note\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl Rust\cell
\pard\intbl A systems language.\cell
\row
}
