crates/gridwell-writer-rtf/tests/snapshots/snapshots__tall-100-rows.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\pard{\b\fs36 Sequence}\par
\par
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\plain\b n\cell
\pard\intbl\plain\b 2n\cell
\pard\intbl\plain\b n^2\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 0\cell
\pard\intbl\plain 0\cell
\pard\intbl\plain 0\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 1\cell
\pard\intbl\plain 2\cell
\pard\intbl\plain 1\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 2\cell
\pard\intbl\plain 4\cell
\pard\intbl\plain 4\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 3\cell
\pard\intbl\plain 6\cell
\pard\intbl\plain 9\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 4\cell
\pard\intbl\plain 8\cell
\pard\intbl\plain 16\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 5\cell
\pard\intbl\plain 10\cell
\pard\intbl\plain 25\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 6\cell
\pard\intbl\plain 12\cell
\pard\intbl\plain 36\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 7\cell
\pard\intbl\plain 14\cell
\pard\intbl\plain 49\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 8\cell
\pard\intbl\plain 16\cell
\pard\intbl\plain 64\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 9\cell
\pard\intbl\plain 18\cell
\pard\intbl\plain 81\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 10\cell
\pard\intbl\plain 20\cell
\pard\intbl\plain 100\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 11\cell
\pard\intbl\plain 22\cell
\pard\intbl\plain 121\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 12\cell
\pard\intbl\plain 24\cell
\pard\intbl\plain 144\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 13\cell
\pard\intbl\plain 26\cell
\pard\intbl\plain 169\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 14\cell
\pard\intbl\plain 28\cell
\pard\intbl\plain 196\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 15\cell
\pard\intbl\plain 30\cell
\pard\intbl\plain 225\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 16\cell
\pard\intbl\plain 32\cell
\pard\intbl\plain 256\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 17\cell
\pard\intbl\plain 34\cell
\pard\intbl\plain 289\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 18\cell
\pard\intbl\plain 36\cell
\pard\intbl\plain 324\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 19\cell
\pard\intbl\plain 38\cell
\pard\intbl\plain 361\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 20\cell
\pard\intbl\plain 40\cell
\pard\intbl\plain 400\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 21\cell
\pard\intbl\plain 42\cell
\pard\intbl\plain 441\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 22\cell
\pard\intbl\plain 44\cell
\pard\intbl\plain 484\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 23\cell
\pard\intbl\plain 46\cell
\pard\intbl\plain 529\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 24\cell
\pard\intbl\plain 48\cell
\pard\intbl\plain 576\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 25\cell
\pard\intbl\plain 50\cell
\pard\intbl\plain 625\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 26\cell
\pard\intbl\plain 52\cell
\pard\intbl\plain 676\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 27\cell
\pard\intbl\plain 54\cell
\pard\intbl\plain 729\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 28\cell
\pard\intbl\plain 56\cell
\pard\intbl\plain 784\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 29\cell
\pard\intbl\plain 58\cell
\pard\intbl\plain 841\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 30\cell
\pard\intbl\plain 60\cell
\pard\intbl\plain 900\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 31\cell
\pard\intbl\plain 62\cell
\pard\intbl\plain 961\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 32\cell
\pard\intbl\plain 64\cell
\pard\intbl\plain 1024\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 33\cell
\pard\intbl\plain 66\cell
\pard\intbl\plain 1089\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 34\cell
\pard\intbl\plain 68\cell
\pard\intbl\plain 1156\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 35\cell
\pard\intbl\plain 70\cell
\pard\intbl\plain 1225\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 36\cell
\pard\intbl\plain 72\cell
\pard\intbl\plain 1296\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 37\cell
\pard\intbl\plain 74\cell
\pard\intbl\plain 1369\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 38\cell
\pard\intbl\plain 76\cell
\pard\intbl\plain 1444\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 39\cell
\pard\intbl\plain 78\cell
\pard\intbl\plain 1521\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 40\cell
\pard\intbl\plain 80\cell
\pard\intbl\plain 1600\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 41\cell
\pard\intbl\plain 82\cell
\pard\intbl\plain 1681\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 42\cell
\pard\intbl\plain 84\cell
\pard\intbl\plain 1764\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 43\cell
\pard\intbl\plain 86\cell
\pard\intbl\plain 1849\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 44\cell
\pard\intbl\plain 88\cell
\pard\intbl\plain 1936\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 45\cell
\pard\intbl\plain 90\cell
\pard\intbl\plain 2025\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 46\cell
\pard\intbl\plain 92\cell
\pard\intbl\plain 2116\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 47\cell
\pard\intbl\plain 94\cell
\pard\intbl\plain 2209\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 48\cell
\pard\intbl\plain 96\cell
\pard\intbl\plain 2304\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 49\cell
\pard\intbl\plain 98\cell
\pard\intbl\plain 2401\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 50\cell
\pard\intbl\plain 100\cell
\pard\intbl\plain 2500\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 51\cell
\pard\intbl\plain 102\cell
\pard\intbl\plain 2601\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 52\cell
\pard\intbl\plain 104\cell
\pard\intbl\plain 2704\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 53\cell
\pard\intbl\plain 106\cell
\pard\intbl\plain 2809\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 54\cell
\pard\intbl\plain 108\cell
\pard\intbl\plain 2916\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 55\cell
\pard\intbl\plain 110\cell
\pard\intbl\plain 3025\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 56\cell
\pard\intbl\plain 112\cell
\pard\intbl\plain 3136\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 57\cell
\pard\intbl\plain 114\cell
\pard\intbl\plain 3249\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 58\cell
\pard\intbl\plain 116\cell
\pard\intbl\plain 3364\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 59\cell
\pard\intbl\plain 118\cell
\pard\intbl\plain 3481\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 60\cell
\pard\intbl\plain 120\cell
\pard\intbl\plain 3600\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 61\cell
\pard\intbl\plain 122\cell
\pard\intbl\plain 3721\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 62\cell
\pard\intbl\plain 124\cell
\pard\intbl\plain 3844\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 63\cell
\pard\intbl\plain 126\cell
\pard\intbl\plain 3969\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 64\cell
\pard\intbl\plain 128\cell
\pard\intbl\plain 4096\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 65\cell
\pard\intbl\plain 130\cell
\pard\intbl\plain 4225\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 66\cell
\pard\intbl\plain 132\cell
\pard\intbl\plain 4356\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 67\cell
\pard\intbl\plain 134\cell
\pard\intbl\plain 4489\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 68\cell
\pard\intbl\plain 136\cell
\pard\intbl\plain 4624\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 69\cell
\pard\intbl\plain 138\cell
\pard\intbl\plain 4761\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 70\cell
\pard\intbl\plain 140\cell
\pard\intbl\plain 4900\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 71\cell
\pard\intbl\plain 142\cell
\pard\intbl\plain 5041\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 72\cell
\pard\intbl\plain 144\cell
\pard\intbl\plain 5184\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 73\cell
\pard\intbl\plain 146\cell
\pard\intbl\plain 5329\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 74\cell
\pard\intbl\plain 148\cell
\pard\intbl\plain 5476\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 75\cell
\pard\intbl\plain 150\cell
\pard\intbl\plain 5625\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 76\cell
\pard\intbl\plain 152\cell
\pard\intbl\plain 5776\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 77\cell
\pard\intbl\plain 154\cell
\pard\intbl\plain 5929\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 78\cell
\pard\intbl\plain 156\cell
\pard\intbl\plain 6084\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 79\cell
\pard\intbl\plain 158\cell
\pard\intbl\plain 6241\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 80\cell
\pard\intbl\plain 160\cell
\pard\intbl\plain 6400\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 81\cell
\pard\intbl\plain 162\cell
\pard\intbl\plain 6561\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 82\cell
\pard\intbl\plain 164\cell
\pard\intbl\plain 6724\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 83\cell
\pard\intbl\plain 166\cell
\pard\intbl\plain 6889\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 84\cell
\pard\intbl\plain 168\cell
\pard\intbl\plain 7056\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 85\cell
\pard\intbl\plain 170\cell
\pard\intbl\plain 7225\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 86\cell
\pard\intbl\plain 172\cell
\pard\intbl\plain 7396\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 87\cell
\pard\intbl\plain 174\cell
\pard\intbl\plain 7569\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 88\cell
\pard\intbl\plain 176\cell
\pard\intbl\plain 7744\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 89\cell
\pard\intbl\plain 178\cell
\pard\intbl\plain 7921\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 90\cell
\pard\intbl\plain 180\cell
\pard\intbl\plain 8100\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 91\cell
\pard\intbl\plain 182\cell
\pard\intbl\plain 8281\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 92\cell
\pard\intbl\plain 184\cell
\pard\intbl\plain 8464\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 93\cell
\pard\intbl\plain 186\cell
\pard\intbl\plain 8649\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 94\cell
\pard\intbl\plain 188\cell
\pard\intbl\plain 8836\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 95\cell
\pard\intbl\plain 190\cell
\pard\intbl\plain 9025\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 96\cell
\pard\intbl\plain 192\cell
\pard\intbl\plain 9216\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 97\cell
\pard\intbl\plain 194\cell
\pard\intbl\plain 9409\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 98\cell
\pard\intbl\plain 196\cell
\pard\intbl\plain 9604\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl\plain row 99\cell
\pard\intbl\plain 198\cell
\pard\intbl\plain 9801\cell
\row
}
